--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Vamshi Krishna Kodimala",email = "102660840+vkrishna03@users.noreply.github.com."}
 ]
 readme = "README.md"
-requires-python = ">=3.12, <4.0"
+requires-python = ">=3.11, <4.0"
 dependencies = [
     "mcp (>=1.6.0,<2.0.0)",
     "langchain (>=0.3.23,<0.4.0)",
@@ -16,7 +16,9 @@ dependencies = [
     "langgraph (>=0.3.31,<0.4.0)",
     "langchain-mcp-adapters (>=0.0.9,<0.0.10)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "langchain-ollama (>=0.3.2,<0.4.0)"
+    "langchain-ollama (>=0.3.2,<0.4.0)",
+    "pinecone (>=6.0.2,<7.0.0)",
+    "langchain-huggingface (>=0.1.2,<0.2.0)"
 ]
 
 [tool.poetry]
