--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "langchain-ollama (>=0.3.2,<0.4.0)",
     "pinecone (>=6.0.2,<7.0.0)",
-    "langchain-huggingface (>=0.1.2,<0.2.0)"
+    "langchain-huggingface (>=0.1.2,<0.2.0)",
+    "aiofiles (>=24.1.0,<25.0.0)",
+    "backoff (>=2.2.1,<3.0.0)"
 ]
 
 [tool.poetry]
