--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# THIS IS MY API KEY FOR GROQ
 GROQ_API_KEY="api_key"
+PINECONE_API_KEY="api_key"
 
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY="<api_key>"
